Added Redoc api documentation for the api
